# qualityops-qa-console

./: .env  .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
coded-agents/: README.md
coded-agents/ado-testcase-writeback-agent/: .gitignore  README.md  bindings.json  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  sample-input.json  uipath.json
coded-agents/ado-testcase-writeback-agent/evaluations/eval-sets/: smoke-test.json
coded-agents/ado-testcase-writeback-agent/qualityops_ado_testcase_writeback_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coded-agents/ado-testcase-writeback-agent/tests/: test_smoke.py
coded-agents/ado-writeback-agent/: README.md  entry-points.json  main.py  pyproject.toml
coded-agents/ado-writeback-agent/myenv/: .gitignore  pyvenv.cfg
coded-agents/ado-writeback-agent/myenv/Scripts/: activate  activate.bat  activate.fish  jsondiff  jsonpatch  jsonpointer
coded-agents/automation-link-agent/: AGENTS.md  CLAUDE.md  README.md  bindings.json  entry-points.json  main.py  project.uiproj  pyproject.toml  sample-input-automation-link.json
coded-agents/automation-link-agent/tests/: test_main.py
coded-agents/final-report-mail-agent/: README.md  agent.mermaid  bindings.json  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
coded-agents/final-report-mail-agent/__uipath/: uipath.json
coded-agents/final-report-mail-agent/tests/: test_main.py
coded-agents/requirement-analysis-agent/: README.md  agent.json  agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml
coded-agents/requirement-analysis-agent/evaluations/eval-sets/: evaluation-set-default.json
coded-agents/requirement-analysis-agent/evaluations/evaluators/: evaluator-default-trajectory.json  evaluator-default.json
coded-agents/requirement-analysis-agent/rag_knowledge_base/: acceptance_criteria_checklist.md  definition_of_ready.md  healthcare_workflow_validation_checklist.md  non_functional_testing_checklist.md  qa_test_design_standard.md  regression_impact_checklist.md
coded-agents/requirement-analysis-agent/resources/AzureDevOpsRequirementFetcher/: resource.json
coded-agents/requirement-analysis-agent/resources/AzureDevOpsWriteBackTool/: resource.json
coded-agents/risk-based-test-planner-agent/: README.md  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  sample-input.json  uipath.json
coded-agents/risk-based-test-planner-agent/tests/: test_main.py
coded-agents/test-case-review-memory-agent/: README.md  agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
coded-agents/test-case-review-memory-agent/__uipath/: state.db
coded-agents/test-case-review-memory-agent/evaluations/eval-sets/: smoke-test.json
coded-agents/test-manager-writeback-agent/: README.md  bindings.json  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  sample-input-realsync.json  sample-input.json
coded-agents/test-manager-writeback-agent/qualityops_test_manager_writeback_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coded-agents/test-manager-writeback-agent/tests/: test_main.py
coded-agents/test-result-triage-agent/: README.md  bindings.json  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml
coded-agents/test-result-triage-agent/tests/: test_classification.py
coded-agents/test-scenario-generation-agent/: README.md  agent.json  agent.mermaid  bindings.json  entry-points.json  main.py  project.uiproj  pyproject.toml  sample-input.json  test_main.py
coded-agents/test-scenario-generation-agent/evals/eval-sets/: evaluation-set-default.json
coded-agents/test-scenario-generation-agent/evals/evaluators/: evaluator-default-trajectory.json  evaluator-default.json
coded-agents/test-scenario-generation-agent/evaluations/eval-sets/: smoke-test.json
coded-agents/test-scenario-generation-agent/evaluations/evaluators/: llm-judge-trajectory.json
coded-agents/test-scenario-generation-agent/qualityops_test_scenario_generation_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coded-agents/test-scenario-generation-agent/rag_knowledge_base/: healthcare_workflow_test_checklist.md  iso29119_test_design_standard.md  istqb_testing_principles.md  qualityops_test_case_standard.md  signed_off_requirement_context.md
src/: App.css  App.tsx  index.css
(+15 files in other folders)
