[project]
name = "Agent"
version = "0.0.1"
description = "Agent"
authors = [{ name = "dhrubajyotikalita094@gmail.com" }]
dependencies = [
    "uipath-langchain[bedrock,vertex]>=0.10.0, <0.11.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.74",
]
[tool.setuptools]
py-modules = ["main"]