[project]
name = "coded-agent"
version = "0.0.2"
description = "Converted agent project"
requires-python = ">=3.11"
authors = [
    { name = "dhrubajyotikalita094@gmail.com", email = "dhrubajyotikalita094@gmail.com" },
]
dependencies = [
    "uipath>=2.10.30, <2.11.0",
    "uipath-langchain>=0.10.4, <0.11.0",
]
