[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualityops-test-scenario-generation-agent"
version = "0.0.12"
description = "QualityOps Test Scenario Generation Agent"
authors = [{ name = "dhrubajyotikalita094@gmail.com" }]
dependencies = [
    "uipath-langchain[bedrock,vertex]>=0.10.0,<0.11.0",
]
requires-python = ">=3.11,<3.14"

[project.optional-dependencies]
dev = [
    "uipath-dev>=0.0.74",
]

[tool.setuptools]
py-modules = ["main"]
